hphp/test/zend/good/Zend/tests/bug42802.php.expectf
ok
ok
ok
ok

Catchable fatal error: Argument 1 passed to foo\test5() must be an instance of bar, foo\bar given in %s/bug42802.php on line 30
